--- a/templates/team.hbs
+++ b/templates/team.hbs
@@ -1,18 +1,3 @@
-<div style="display:inline;">
-  <div style="inline-block">
-    <h1 style="color: red;">Coaches</h1>
-    {{#each coaches}}
-      <h1>{{this.name}}</h1>
-      <h2>{{this.coaching_title}}</h2>
-      <hr>
-    {{/each}}
-  </div>
-  <div style="inline-block">
-    <h1 style="color: red;">Players</h1>
-    {{#each players}}
-      <h1>{{this.name}}</h1>
-      <h2>{{this.player_title}}</h2>
-      <hr>
-    {{/each}}
-  </div>
+<div>
+  {{!-- Show offense and defense list --}}
 </div>
