add redirect to /sb

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,8 +1,14 @@
 .container {
   text-align: center;
 }
+
+
 .superBowl {
   display: inline-block;
   margin-right: 50px;
   text-align: center;
+}
+
+.score {
+  font-size: 55px;
 }
