--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,5 +1,14 @@
 <div>
-  Check out the teams of Superbowl 51!
+  <h2>Check the past 4 Superbowls!</h2>
+  <a href="/sb/48">
+    <h1>Superbowl 48</h1>
+  </a>
+  <a href="/sb/49">
+    <h1>Superbowl 49</h1>
+  </a>
+  <a href="/sb/50">
+    <h1>Superbowl 50</h1>
+  </a>
   <a href="/sb/51">
     <h1>Superbowl 51</h1>
   </a>
