--- a/templates/sb.hbs
+++ b/templates/sb.hbs
@@ -6,7 +6,7 @@
     <div class="superBowl">
       <a href="/sb/{{../data.id}}/{{this.id}}"><h1>{{this.name}}</h1></a>
       <h2>{{this.conference}}</h2>
-      <h3>{{this.TeamsSuperbowl.score}}</h3>
+      <h3 class="score">{{this.TeamsSuperbowl.score}}</h3>
     </div>
   {{/each}}
   </div>
