add query for players and coaches of sb-team

--- a/templates/sb.hbs
+++ b/templates/sb.hbs
@@ -1,6 +1,7 @@
 <div class="container">
   <h1>Super Bowl {{data.number}}</h1>
-  <h4>{{data.location}}</h4>
+  <h4><b>{{data.location}}</b></h4>
+  <h4>{{data.date}}</h4>
   <div>
   {{#each data.Teams}}
     <div class="superBowl">
